pipeline/headers-to-interfaces/generated/grammar/SatisfactoryHeaderParser.ts
// Generated from ./grammar/SatisfactoryHeaderParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SatisfactoryHeaderParserListener } from "./SatisfactoryHeaderParserListener";

export class SatisfactoryHeaderParser extends Parser {
	public static readonly CLASS = 1;
	public static readonly EXTERN = 2;
	public static readonly CONST = 3;
	public static readonly CONSTEXPR = 4;
	public static readonly ENUM = 5;
	public static readonly FALSE = 6;
	public static readonly FORCEINLINE = 7;
	public static readonly FRIEND = 8;
	public static readonly INLINE = 9;
	public static readonly MUTABLE = 10;
	public static readonly NAMESPACE = 11;
	public static readonly OPERATOR = 12;
	public static readonly OVERRIDE = 13;
	public static readonly PRIVATE = 14;
	public static readonly PROTECTED = 15;
	public static readonly PUBLIC = 16;
	public static readonly STATIC = 17;
	public static readonly STRUCT = 18;
	public static readonly TEMPLATE = 19;
	public static readonly TRUE = 20;
	public static readonly TYPEDEF = 21;
	public static readonly TYPENAME = 22;
	public static readonly USING = 23;
	public static readonly VIRTUAL = 24;
	public static readonly UCLASS = 25;
	public static readonly UENUM = 26;
	public static readonly UFUNCTION = 27;
	public static readonly UINTERFACE = 28;
	public static readonly UMETA = 29;
	public static readonly UPARAM = 30;
	public static readonly UPROPERTY = 31;
	public static readonly USTRUCT = 32;
	public static readonly UE_DEPRECATED = 33;
	public static readonly STAT = 34;
	public static readonly SF_CLASS_TAG = 35;
	public static readonly SF_GENERATED_BODY = 36;
	public static readonly AMPERSAND = 37;
	public static readonly BACKSLASH = 38;
	public static readonly BANG = 39;
	public static readonly CLOSE_ANGLE = 40;
	public static readonly CLOSE_BRACE = 41;
	public static readonly CLOSE_PAREN = 42;
	public static readonly CLOSE_SQUARE = 43;
	public static readonly COLON = 44;
	public static readonly COMMA = 45;
	public static readonly EQUALS = 46;
	public static readonly MINUS = 47;
	public static readonly OPEN_ANGLE = 48;
	public static readonly OPEN_BRACE = 49;
	public static readonly OPEN_PAREN = 50;
	public static readonly OPEN_SQUARE = 51;
	public static readonly PERCENT = 52;
	public static readonly PERIOD = 53;
	public static readonly PIPE = 54;
	public static readonly PLUS = 55;
	public static readonly QUESTION = 56;
	public static readonly SEMICOLON = 57;
	public static readonly SLASH = 58;
	public static readonly STAR = 59;
	public static readonly TILDE = 60;
	public static readonly IDENTIFIER = 61;
	public static readonly STRING_LITERAL = 62;
	public static readonly FLOAT_LITERAL = 63;
	public static readonly INTEGER_LITERAL = 64;
	public static readonly HEX_LITERAL = 65;
	public static readonly MultiLineMacro = 66;
	public static readonly Directive = 67;
	public static readonly LINE_COMMENT_START = 68;
	public static readonly BLOCK_COMMENT_START = 69;
	public static readonly WHITESPACE = 70;
	public static readonly LINE_COMMENT_END = 71;
	public static readonly LINE_COMMENT_TEXT = 72;
	public static readonly LINE_COMMENT_OTHER = 73;
	public static readonly BLOCK_COMMENT_END = 74;
	public static readonly BLOCK_COMMENT_NEW_LINE = 75;
	public static readonly BLOCK_COMMENT_TEXT = 76;
	public static readonly BLOCK_COMMENT_OTHER = 77;
	public static readonly RULE_file = 0;
	public static readonly RULE_element = 1;
	public static readonly RULE_value = 2;
	public static readonly RULE_literal = 3;
	public static readonly RULE_identifier = 4;
	public static readonly RULE_stringLiteral = 5;
	public static readonly RULE_numericLiteral = 6;
	public static readonly RULE_booleanLiteral = 7;
	public static readonly RULE_typeDeclaration = 8;
	public static readonly RULE_templateType = 9;
	public static readonly RULE_typeModifier = 10;
	public static readonly RULE_typeReferenceType = 11;
	public static readonly RULE_globalVariableDeclaration = 12;
	public static readonly RULE_classDeclaration = 13;
	public static readonly RULE_classHeader = 14;
	public static readonly RULE_classMacro = 15;
	public static readonly RULE_templateDeclaration = 16;
	public static readonly RULE_classKeyword = 17;
	public static readonly RULE_classInheritance = 18;
	public static readonly RULE_classExtensionList = 19;
	public static readonly RULE_classExtension = 20;
	public static readonly RULE_classBody = 21;
	public static readonly RULE_classEntries = 22;
	public static readonly RULE_classEntry = 23;
	public static readonly RULE_classVisibility = 24;
	public static readonly RULE_classVisibilityModifier = 25;
	public static readonly RULE_friendDeclaration = 26;
	public static readonly RULE_statDeclaration = 27;
	public static readonly RULE_classMethod = 28;
	public static readonly RULE_classMethodEnd = 29;
	public static readonly RULE_classMethodResultModifier = 30;
	public static readonly RULE_classInitializerList = 31;
	public static readonly RULE_classInitializer = 32;
	public static readonly RULE_classProperty = 33;
	public static readonly RULE_classPropertyDefaultValue = 34;
	public static readonly RULE_literalExpression = 35;
	public static readonly RULE_classPropertyArraySize = 36;
	public static readonly RULE_nestedEnum = 37;
	public static readonly RULE_nestedEnumInheritance = 38;
	public static readonly RULE_nestedEnumClass = 39;
	public static readonly RULE_nestedClass = 40;
	public static readonly RULE_nestedStruct = 41;
	public static readonly RULE_genericEnumDeclaration = 42;
	public static readonly RULE_enumDeclaration = 43;
	public static readonly RULE_enumHeader = 44;
	public static readonly RULE_enumBody = 45;
	public static readonly RULE_enumEntry = 46;
	public static readonly RULE_enumValue = 47;
	public static readonly RULE_staticFunctionDeclaration = 48;
	public static readonly RULE_staticArrayDeclaration = 49;
	public static readonly RULE_staticPropertyDeclaration = 50;
	public static readonly RULE_staticInlineFunctionDeclaration = 51;
	public static readonly RULE_staticMethodCall = 52;
	public static readonly RULE_typedef = 53;
	public static readonly RULE_contentWithNestedParens = 54;
	public static readonly RULE_contentWithNestedParensInner = 55;
	public static readonly RULE_contentWithNestedBraces = 56;
	public static readonly RULE_contentWithNestedBracesInner = 57;
	public static readonly RULE_contentWithNestedAngles = 58;
	public static readonly RULE_contentWithNestedAnglesInner = 59;
	public static readonly RULE_contentWithNestedSquares = 60;
	public static readonly RULE_contentWithNestedSquaresInner = 61;
	public static readonly RULE_functionName = 62;
	public static readonly RULE_functionModifier = 63;
	public static readonly RULE_namespaceDeclaration = 64;
	public static readonly RULE_usingNamespace = 65;
	public static readonly RULE_uclassMacro = 66;
	public static readonly RULE_uenumMacro = 67;
	public static readonly RULE_ufunctionMacro = 68;
	public static readonly RULE_uinterfaceMacro = 69;
	public static readonly RULE_umetaMacro = 70;
	public static readonly RULE_uParamMacro = 71;
	public static readonly RULE_upropertyMacro = 72;
	public static readonly RULE_ustructMacro = 73;
	public static readonly RULE_uedeprecatedMacro = 74;
	public static readonly RULE_generatedBodyMacro = 75;
	public static readonly RULE_macroPropertyList = 76;
	public static readonly RULE_macroPropertyListEntries = 77;
	public static readonly RULE_macroProperty = 78;
	public static readonly RULE_macroPropertyPair = 79;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "element", "value", "literal", "identifier", "stringLiteral", 
		"numericLiteral", "booleanLiteral", "typeDeclaration", "templateType", 
		"typeModifier", "typeReferenceType", "globalVariableDeclaration", "classDeclaration", 
		"classHeader", "classMacro", "templateDeclaration", "classKeyword", "classInheritance", 
		"classExtensionList", "classExtension", "classBody", "classEntries", "classEntry", 
		"classVisibility", "classVisibilityModifier", "friendDeclaration", "statDeclaration", 
		"classMethod", "classMethodEnd", "classMethodResultModifier", "classInitializerList", 
		"classInitializer", "classProperty", "classPropertyDefaultValue", "literalExpression", 
		"classPropertyArraySize", "nestedEnum", "nestedEnumInheritance", "nestedEnumClass", 
		"nestedClass", "nestedStruct", "genericEnumDeclaration", "enumDeclaration", 
		"enumHeader", "enumBody", "enumEntry", "enumValue", "staticFunctionDeclaration", 
		"staticArrayDeclaration", "staticPropertyDeclaration", "staticInlineFunctionDeclaration", 
		"staticMethodCall", "typedef", "contentWithNestedParens", "contentWithNestedParensInner", 
		"contentWithNestedBraces", "contentWithNestedBracesInner", "contentWithNestedAngles", 
		"contentWithNestedAnglesInner", "contentWithNestedSquares", "contentWithNestedSquaresInner", 
		"functionName", "functionModifier", "namespaceDeclaration", "usingNamespace", 
		"uclassMacro", "uenumMacro", "ufunctionMacro", "uinterfaceMacro", "umetaMacro", 
		"uParamMacro", "upropertyMacro", "ustructMacro", "uedeprecatedMacro", 
		"generatedBodyMacro", "macroPropertyList", "macroPropertyListEntries", 
		"macroProperty", "macroPropertyPair",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'class'", "'extern'", "'const'", "'constexpr'", "'enum'", 
		"'false'", "'FORCEINLINE'", "'friend'", "'inline'", "'mutable'", "'namespace'", 
		"'operator'", "'override'", "'private'", "'protected'", "'public'", "'static'", 
		"'struct'", "'template'", "'true'", "'typedef'", "'typename'", "'using'", 
		"'virtual'", "'UCLASS'", "'UENUM'", "'UFUNCTION'", "'UINTERFACE'", "'UMETA'", 
		"'UPARAM'", "'UPROPERTY'", "'USTRUCT'", "'UE_DEPRECATED'", "'STAT'", "'FACTORYGAME_API'", 
		undefined, "'&'", "'/'", "'!'", "'>'", "'}'", "')'", "']'", "':'", "','", 
		"'='", "'-'", "'<'", "'{'", "'('", "'['", "'%'", "'.'", "'|'", "'+'", 
		"'?'", "';'", "'\\'", "'*'", "'~'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "CLASS", "EXTERN", "CONST", "CONSTEXPR", "ENUM", "FALSE", "FORCEINLINE", 
		"FRIEND", "INLINE", "MUTABLE", "NAMESPACE", "OPERATOR", "OVERRIDE", "PRIVATE", 
		"PROTECTED", "PUBLIC", "STATIC", "STRUCT", "TEMPLATE", "TRUE", "TYPEDEF", 
		"TYPENAME", "USING", "VIRTUAL", "UCLASS", "UENUM", "UFUNCTION", "UINTERFACE", 
		"UMETA", "UPARAM", "UPROPERTY", "USTRUCT", "UE_DEPRECATED", "STAT", "SF_CLASS_TAG", 
		"SF_GENERATED_BODY", "AMPERSAND", "BACKSLASH", "BANG", "CLOSE_ANGLE", 
		"CLOSE_BRACE", "CLOSE_PAREN", "CLOSE_SQUARE", "COLON", "COMMA", "EQUALS", 
		"MINUS", "OPEN_ANGLE", "OPEN_BRACE", "OPEN_PAREN", "OPEN_SQUARE", "PERCENT", 
		"PERIOD", "PIPE", "PLUS", "QUESTION", "SEMICOLON", "SLASH", "STAR", "TILDE", 
		"IDENTIFIER", "STRING_LITERAL", "FLOAT_LITERAL", "INTEGER_LITERAL", "HEX_LITERAL", 
		"MultiLineMacro", "Directive", "LINE_COMMENT_START", "BLOCK_COMMENT_START", 
		"WHITESPACE", "LINE_COMMENT_END", "LINE_COMMENT_TEXT", "LINE_COMMENT_OTHER", 
		"BLOCK_COMMENT_END", "BLOCK_COMMENT_NEW_LINE", "BLOCK_COMMENT_TEXT", "BLOCK_COMMENT_OTHER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SatisfactoryHeaderParser._LITERAL_NAMES, SatisfactoryHeaderParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SatisfactoryHeaderParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SatisfactoryHeaderParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return SatisfactoryHeaderParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SatisfactoryHeaderParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SatisfactoryHeaderParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SatisfactoryHeaderParser.RULE_file);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 163;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SatisfactoryHeaderParser.CLASS) | (1 << SatisfactoryHeaderParser.EXTERN) | (1 << SatisfactoryHeaderParser.CONST) | (1 << SatisfactoryHeaderParser.CONSTEXPR) | (1 << SatisfactoryHeaderParser.ENUM) | (1 << SatisfactoryHeaderParser.FORCEINLINE) | (1 << SatisfactoryHeaderParser.FRIEND) | (1 << SatisfactoryHeaderParser.INLINE) | (1 << SatisfactoryHeaderParser.MUTABLE) | (1 << SatisfactoryHeaderParser.NAMESPACE) | (1 << SatisfactoryHeaderParser.OPERATOR) | (1 << SatisfactoryHeaderParser.STATIC) | (1 << SatisfactoryHeaderParser.STRUCT) | (1 << SatisfactoryHeaderParser.TEMPLATE) | (1 << SatisfactoryHeaderParser.TYPEDEF) | (1 << SatisfactoryHeaderParser.USING) | (1 << SatisfactoryHeaderParser.VIRTUAL) | (1 << SatisfactoryHeaderParser.UCLASS) | (1 << SatisfactoryHeaderParser.UENUM) | (1 << SatisfactoryHeaderParser.UINTERFACE) | (1 << SatisfactoryHeaderParser.UPARAM))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (SatisfactoryHeaderParser.USTRUCT - 32)) | (1 << (SatisfactoryHeaderParser.SEMICOLON - 32)) | (1 << (SatisfactoryHeaderParser.TILDE - 32)) | (1 << (SatisfactoryHeaderParser.IDENTIFIER - 32)))) !== 0)) {
				{
				{
				this.state = 160;
				this.element();
				}
				}
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public element(): ElementContext {
		let _localctx: ElementContext = new ElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SatisfactoryHeaderParser.RULE_element);
		try {
			this.state = 179;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 166;
				this.classDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 167;
				this.enumDeclaration();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 168;
				this.namespaceDeclaration();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 169;
				this.staticMethodCall();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 170;
				this.staticFunctionDeclaration();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 171;
				this.staticArrayDeclaration();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 172;
				this.staticInlineFunctionDeclaration();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 173;
				this.staticPropertyDeclaration();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 174;
				this.typedef();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 175;
				this.usingNamespace();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 176;
				this.globalVariableDeclaration();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 177;
				this.genericEnumDeclaration();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 178;
				this.match(SatisfactoryHeaderParser.SEMICOLON);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let _localctx: ValueContext = new ValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SatisfactoryHeaderParser.RULE_value);
		try {
			this.state = 183;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SatisfactoryHeaderParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 181;
				this.identifier();
				}
				break;
			case SatisfactoryHeaderParser.FALSE:
			case SatisfactoryHeaderParser.TRUE:
			case SatisfactoryHeaderParser.STRING_LITERAL:
			case SatisfactoryHeaderParser.FLOAT_LITERAL:
			case SatisfactoryHeaderParser.INTEGER_LITERAL:
			case SatisfactoryHeaderParser.HEX_LITERAL:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 182;
				this.literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SatisfactoryHeaderParser.RULE_literal);
		try {
			this.state = 188;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SatisfactoryHeaderParser.STRING_LITERAL:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 185;
				this.stringLiteral();
				}
				break;
			case SatisfactoryHeaderParser.FLOAT_LITERAL:
			case SatisfactoryHeaderParser.INTEGER_LITERAL:
			case SatisfactoryHeaderParser.HEX_LITERAL:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 186;
				this.numericLiteral();
				}
				break;
			case SatisfactoryHeaderParser.FALSE:
			case SatisfactoryHeaderParser.TRUE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 187;
				this.booleanLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SatisfactoryHeaderParser.RULE_identifier);
		try {
			this.state = 195;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 190;
				this.match(SatisfactoryHeaderParser.IDENTIFIER);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 191;
				this.match(SatisfactoryHeaderParser.IDENTIFIER);
				this.state = 192;
				this.match(SatisfactoryHeaderParser.COLON);
				this.state = 193;
				this.match(SatisfactoryHeaderParser.COLON);
				this.state = 194;
				this.match(SatisfactoryHeaderParser.IDENTIFIER);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stringLiteral(): StringLiteralContext {
		let _localctx: StringLiteralContext = new StringLiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SatisfactoryHeaderParser.RULE_stringLiteral);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 197;
			this.match(SatisfactoryHeaderParser.STRING_LITERAL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public numericLiteral(): NumericLiteralContext {
		let _localctx: NumericLiteralContext = new NumericLiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SatisfactoryHeaderParser.RULE_numericLiteral);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 199;
			_la = this._input.LA(1);
			if (!(((((_la - 63)) & ~0x1F) === 0 && ((1 << (_la - 63)) & ((1 << (SatisfactoryHeaderParser.FLOAT_LITERAL - 63)) | (1 << (SatisfactoryHeaderParser.INTEGER_LITERAL - 63)) | (1 << (SatisfactoryHeaderParser.HEX_LITERAL - 63)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
